fix img size on mobile

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ main {
   padding: 0;
 }
 
-.display-img {
+.display-img-mobile {
   width: 100vw;
 }
 
